--- a/themes/amazium/static/base.css
+++ b/themes/amazium/static/base.css
@@ -68,7 +68,7 @@
 	
 /***** Blockquotes *****/
 
-	blockquote, blockquote p 				{ font-size:12px; line-height:14px; color:#777; font-family:"Inconsalata", Courier; }
+	blockquote, blockquote p 				{ font-size:12px; line-height:14px; color:#777; font-family: "Inconsolata", Courier, Monospace; }
 	blockquote 								{ margin:10px 10px 15px 0; padding:0 0 0 5px; border-left:1px solid #747474; }
 	blockquote cite 						{ display:block; font-size:12px; color:#555; }
 	blockquote cite:before 					{ content:"\2014 \0020"; }
