--- a/themes/amazium/templates/article_info.html
+++ b/themes/amazium/templates/article_info.html
@@ -1,7 +1,7 @@
 <footer class="post-info">
         {% if article.author %}
         <address class="vcard author">
-                By <a class="url fn" href="{{ SITEURL }}/page/about/index.html">{{ article.author }}</a> in <a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a> | {{ article.date.strftime("%A, %d %B %Y") }}
+                By <!--<a class="url fn" href="{{ SITEURL }}/page/about/index.html"> -->{{ article.author }} in <a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a> | {{ article.date.strftime("%A, %d %B %Y") }}
         </address>
 		<hr />
         {% endif %}
