--- a/themes/amazium/templates/base.html
+++ b/themes/amazium/templates/base.html
@@ -36,6 +36,14 @@
 	<link rel="shortcut icon" href="{{ SITEURL }}/theme/images/favicon.ico">
 	
 	<!-- To Top scripts -->
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+  tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+});
+</script>
+    <script type="text/javascript"
+  src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
 	<script src="{{ SITEURL}}/theme/smoothscroll.js"type="text/javascript" ></script>
 	<script src="jqueryjs.googlecode.com/files/jquery-1.3.js" type="text/javascript"></script>
 	<script src="{{ SITEURL}}/theme/jquery.easing.1.3.js" type="text/javascript"></script>
@@ -64,7 +72,7 @@ piwikTracker.enableLinkTracking();
 
 <div class="row">
 	<div class="grid_4">
-	<h1><div id="header_image"></div>Eleventeen<br /><sup style="font-size:15px;"><i>Because imaginary numbers can be real</i></sup></h1>
+	<h1><div id="header_image"></div><a href="{{ SITEURL }}">Eleventeen</a><br /><sup style="font-size:15px;"><i>Because imaginary numbers can be real</i></sup></h1>
 	</div>
 </div>
 
