site title changed

--- a/themes/amazium/templates/base.html
+++ b/themes/amazium/templates/base.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Eleventeen</title>
+	<title>{% block title %}{{ SITENAME }}{%endblock%}</title>
 	<meta name="description" content="wooki">
 	<meta name="author" content="wooki">
 	<meta name="keywords" content="wooki, wooki.za.net, code, game development, personal">
