changed theme a bit

--- a/themes/amazium/templates/base.html
+++ b/themes/amazium/templates/base.html
@@ -72,7 +72,7 @@ piwikTracker.enableLinkTracking();
 
 <div class="row">
 	<div class="grid_4">
-	<h1><div id="header_image"></div><a href="{{ SITEURL }}">Eleventeen</a><br /><sup style="font-size:15px;"><i>Because imaginary numbers can be real</i></sup></h1>
+	<h1><div id="header_image"></div><a href="{{ SITEURL }}">Eleventeen</a><br /><sup style="font-size:12px;font-style:italic">coz imaginary numbers can be real</sup></h1>
 	</div>
 </div>
 
